FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20130606:
AUTHOR: bapt@FreeBSD.org

  The OPTIONS macro is no longer recognized, please use the new options
  framework.

20130509:
AUTHOR: kwm@FreeBSD.org

  * Two new USES macros to handle mime data of ports.

  USES= desktop-file-utils
	Handles MimeType in .desktop files that are installed in 
	share/applications.
  USES= shared-mime-info
	For supporting mime xml files installed in 
	share/mime/packages.

  The desktop-file-utils USES is only needed if the .desktop files
  installed by the port has a MimeType field. 
  USE_GNOME=desktopfileutils is deprecated.

  The shared-mime-info USES handles mime types xml files.
  Please note that only the packages/${NAME}.xml file should be listed in
  the plist. The shared-mime-info port will clean up the share/mime/*
  directories and generated files.

  Both USES have there own post-install and code that adds @exec/@unexec
  lines to the pkg-plist. This means that when a port switches to the 
  USES macro, the related post-install command  and @exec/@unexec
  lines can be removed from the prot.

20130507:
AUTHOR: bapt@FreeBSD.org

  * New USES macro to handle setting correct shebang to scripts

  By default it will fix bash, perl, php, ruby and python on all files specified
  in the SHEBANG_FILES macro (glob pattern relative to ${WRKSRC})

  Paths can be customized, and number of languages supported can be extended.

  * USE_GETTEXT, USE_NCURSES, USE_READLINE are no longer recognized

20130506:
AUTHOR: bapt@FreeBSD.org

  * New USES macro to handle linking on ncurses and on readline

  USES= ncurses will set env and make the port link to base version of ncurses